fixed name wrapping on smallest screen size.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -27,6 +27,7 @@ $layout-tablet: 'only screen and (min-width: 768px) and (max-width: 991px)';
 $layout-mobile-lg: 'only screen and (max-width: 767px)';
 $layout-mobile-sm: 'only screen and (max-width: 575px)';
 $layout-mobile-xs: 'only screen and (max-width: 480px)';
+$layout-mobile-xxs: 'only screen and (max-width: 320px)';
 
 // Social Colors
 $facebook: #3b5999;
