--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -65,6 +65,11 @@
     h3 {
       font-weight: 600;
       margin-top: -8px;
+      span {
+        br {
+          display: none;
+        }
+      }
     }
 
     ul {
@@ -115,11 +120,22 @@
     }
     &-content {
       margin-top: 30px;
-
       ul {
         li {
           b {
             min-width: 90px;
+          }
+        }
+      }
+    }
+  }
+
+  @media #{$layout-mobile-xxs} {
+    &-content {
+      h3 {
+        span {
+          br {
+            display: block;
           }
         }
       }
